build fix to support preview features